# argo-dsl

./: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
argo_dsl/: __init__.py  decorator.py  tasks.py  template.py  utils.py  workflow.py
argo_dsl/api/: __init__.py  eventsource.py  sensor.py
argo_dsl/api/google/: __init__.py  protobuf.py
argo_dsl/api/grpc/gateway/: runtime.py
argo_dsl/api/io/argoproj/events/: v1alpha1.py
argo_dsl/api/io/argoproj/workflow/: v1alpha1.py
argo_dsl/api/io/k8s/api/core/: v1.py
argo_dsl/api/io/k8s/api/policy/: v1beta1.py
argo_dsl/api/io/k8s/apimachinery/pkg/api/: resource.py
argo_dsl/api/io/k8s/apimachinery/pkg/apis/meta/: v1.py
argo_dsl/api/io/k8s/apimachinery/pkg/util/: intstr.py
tests/: test_argo_dsl.py  test_decorator.py  test_tasks.py  test_template.py  test_utils.py
